--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,64 @@
-.App {
+.container {
+  max-width: 1100px;
+  width: 100%;
+  padding: 0 50px;
+  margin: 0 auto;
+}
+
+.app {
+  background-position: center;
+  background: linear-gradient(180deg, #e4e2e3 0%, #e3c9d2 100%);
+}
+.app-title {
+  color: #231d4f;
+  margin: 30px 0;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 72px;
   text-align: center;
+  text-transform: uppercase;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.app-films-title_ul {
+  margin-bottom: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.app-films-title_ul li {
+  list-style-type: none;
+  color: #777581;
+  font-size: 18px;
+  letter-spacing: 0.02em;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 36px;
+}
+.app-banner img {
+  width: 100%;
+}
+
+@media only screen and (max-width: 768px) {
+  .app-title {
+    font-size: 28px;
+  }
+
+  .app-films-title_ul li {
+    font-size: 17px;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media only screen and (max-width: 564px) {
+  .container {
+    padding: 0 20px;
   }
-  to {
-    transform: rotate(360deg);
+  .app-title {
+    font-size: 17px;
+    margin: 15px 0;
+    line-height: 30px;
+  }
+  .app-films-title_ul li {
+    font-size: 15px;
+    line-height: 30px;
+    text-align: center;
   }
 }
